# Atmega0SeriesLib

./: .gitignore  Atmega4809EVSYS.hpp  Atmega4809Port.hpp  GccApplication1.atsln  LICENSE  README.md  library0 - Dev-Guide.html  library0 - UserGuide.html  libraryDG  libraryDG.html  libraryUG  libraryUG.html
Bericht Praxisprojekt/: Bericht Praxisprojekt.adoc
GccApplication1/: AVRConcepts.hpp  Atmega4809.hpp  Atmega4809EVSYS.hpp  Atmega4809Port.hpp  CMakeLists.txt  Eventsystem.hpp  GccApplication1.componentinfo.xml  GccApplication1.cppproj  MCUSelect.hpp  Pin.hpp  Port.hpp  Register.hpp  main.cpp  test.hpp
GccApplication1/hw_abstractions/: Bit.hpp  Eventsystem.hpp  Pin.hpp  Port.hpp  Register.hpp  RessourceController.hpp  SPI.hpp  TWI.hpp
GccApplication1/inc/: MCUSelect.hpp  MCUs.hpp  test.hpp
GccApplication1/inc/Boards/: CuriosityNanoIOT.hpp  DebugOut.hpp
GccApplication1/inc/DeviceFamilys/: ATmegaZero.hpp
GccApplication1/inc/etl/: meta.h
GccApplication1/inc/hw_abstractions/: ADC.hpp  Basics.hpp  Bit.hpp  CPU.hpp  Components.hpp  Delay.hpp  Eventsystem.hpp  Port.hpp  PortMux.hpp  PortPin.hpp  Register.hpp  RessourceController.hpp  SPI.hpp  TWI.hpp  USART.hpp
GccApplication1/inc/mega4808/: Atmega4808.hpp
GccApplication1/inc/mega4808/hal/: ATmega4808ADC.hpp  ATmega4808CPU.hpp  ATmega4808TWI.hpp  ATmega4808USART.hpp  Atmega4808EVSYS.hpp  Atmega4808EventSystem.hpp  Atmega4808Port.hpp  Atmega4808SPI.hpp
GccApplication1/inc/mega4809/: Atmega4809.hpp
GccApplication1/inc/mega4809/hal/: Atmega4809EVSYS.hpp  Atmega4809EventSystem.hpp  Atmega4809Port.hpp  Atmega4809SPI.hpp
GccApplication1/inc/std/bits/: pair.h
GccApplication1/inc/tools/: AVRConcepts.hpp  concepts.h  fifo.h  meta.h  scoped.h  utils.h
GccApplication1/mega4808/: Atmega4808.hpp
GccApplication1/mega4808/hal/: ATmega4808ADC.hpp  ATmega4808TWI.hpp  Atmega4808EVSYS.hpp  Atmega4808Port.hpp  Atmega4808SPI.hpp
GccApplication1/mega4809/: Atmega4809.hpp
GccApplication1/mega4809/hal/: Atmega4809EVSYS.hpp  Atmega4809Port.hpp  Atmega4809SPI.hpp
GccApplication1/parser/: ATmega4808.atdf  ATmega4809.atdf  CMakeLists.txt  MCUStructureBuilder.h  main.cpp
GccApplication1/src/: main.cpp
GccApplication1/tests/: spimaster.cpp
GccApplication1/tools/: utils.h
parser/: MCUStructureBuilder.h  Makefile  main.cpp
